--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header {
 }
 
 .navbar nav ul li a {
-    color: white;
+    color: blue;
     text-decoration: none;
     font-size: 18px;
     padding: 5px 10px;
