--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header {
 }
 
 .navbar nav ul li a {
-    color: blue;
+    color: white;
     text-decoration: none;
     font-size: 18px;
     padding: 5px 10px;
@@ -62,7 +62,7 @@ header {
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: white;
+    color: black;
 }
 
 .home-content h1 {
